--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="heading"
       style="grid-column-start: 8; text-align: center; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: white; margin-top: 45px; font-size: larger;">
-      <h1>N-Queen Visualizer</h1>
+      <h1>N-Queens Visualizer</h1>
     </div>
 
     <div class="image2" style="grid-column-end: 14;">
