--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <div class="container" style="display: grid; grid-template-columns: auto auto auto auto;
+  <!-- <div class="container" style="display: grid; grid-template-columns: auto auto auto auto;
   grid-gap: 40px;">
     <div class="image1" style="grid-column-start: 1 ;">
       <img src="https://i.ibb.co/0rymhT6/logo.png" alt="logo1" height="130px" width="150px" style="margin: 10px;">
@@ -39,7 +39,7 @@
     <div class="image2" style="grid-column-end: 14;">
       <img src=" https://i.ibb.co/JqKvnND/logo2.png" alt="logo2" height="70px" width="150px" style="margin-top: 30px;">
     </div>
-  </div>
+  </div> -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!-- Bootstrap -->
